--- a/openrem/remapp/templates/remapp/dxdetail.html
+++ b/openrem/remapp/templates/remapp/dxdetail.html
@@ -23,9 +23,13 @@
         <li>Procedure: {{ generalstudymoduleattr.procedure_code_meaning }}</li>
         <li>Requested procedure: {{ generalstudymoduleattr.requested_procedure_code_meaning }}</li>
       {% if showStandardNames %}
-        <li>Standard study name: {{ generalstudymoduleattr.standard_study_name|default_if_none:"-" }}</li>
-        <li>Standard procedure name: {{ generalstudymoduleattr.standard_procedure_name|default_if_none:"-" }}</li>
-        <li>Standard requested name: {{ generalstudymoduleattr.standard_request_name|default_if_none:"-" }}</li>
+        <li>Standard study names:
+            <ul>
+            {% for std_name in generalstudymoduleattr.standard_names.all %}
+                <li>{{ std_name.standard_name }}</li>
+            {% endfor %}
+            </ul>
+        </li>
       {% endif %}
 
         <li>Patient age: {{ patientstudy.patient_age_decimal|floatformat:1 }} years</li>
@@ -115,9 +119,15 @@
               <tr>
                 <td>{{ event.date_time_started|time:"H:i.s" }}</td>
                 <td>{{ event.acquisition_protocol }}</td>
-        {% if showStandardNames %}
-                <td rowspan="2">{{ event.standard_acquisition_protocol|default_if_none:"-" }}</td>
-        {% endif %}
+                {% if showStandardNames %}
+                    <td rowspan="2">
+                        <table>
+                        {% for std_name in event.standard_protocols.all %}
+                            <tr><td class="nowrap">{{ std_name.standard_name|default_if_none:"-" }}</td></tr>
+                        {% endfor %}
+                        </table>
+                    </td>
+                {% endif %}
                 <td>
                   {% if event.anatomical_structure %} {{ event.anatomical_structure.code_meaning }} {% endif %}
                   {% if event.laterality %}{{ event.laterality.code_meaning }} {% endif %}<br>
