--- a/openrem/remapp/templates/remapp/standardnameview.html
+++ b/openrem/remapp/templates/remapp/standardnameview.html
@@ -73,24 +73,32 @@
   <h3>CT</h3>
 </a>
 <span id="CT-names">Querying the database for standard names, please wait</span>
-<a class="btn btn-default" href="{% url 'add_name_ct' %}" role="button">Add new CT entry</a>
+{% if admin.admingroup %}
+    <a class="btn btn-default" href="{% url 'add_name_ct' %}" role="button">Add new CT entry</a>
+{% endif %}
 
 <a id="fluoro" class="vert-offset">
   <h3>Fluoroscopy</h3>
 </a>
 <span id="RF-names">Querying the database for standard names, please wait</span>
-<a class="btn btn-default" href="{% url 'add_name_rf' %}" role="button">Add new fluoroscopy entry</a>
+{% if admin.admingroup %}
+    <a class="btn btn-default" href="{% url 'add_name_rf' %}" role="button">Add new fluoroscopy entry</a>
+{% endif %}
 
 <a id="mammo" class="vert-offset">
   <h3>Mammography</h3>
 </a>
 <span id="MG-names">Querying the database for standard names, please wait</span>
-<a class="btn btn-default" href="{% url 'add_name_mg' %}" role="button">Add new mammography entry</a>
+{% if admin.admingroup %}
+    <a class="btn btn-default" href="{% url 'add_name_mg' %}" role="button">Add new mammography entry</a>
+{% endif %}
 
 <a id="dx" class="vert-offset">
   <h3>Radiography</h3>
 </a>
 <span id="DX-names">Querying the database for standard names, please wait</span>
-<a class="btn btn-default" href="{% url 'add_name_dx' %}" role="button">Add new radiography entry</a>
+{% if admin.admingroup %}
+    <a class="btn btn-default" href="{% url 'add_name_dx' %}" role="button">Add new radiography entry</a>
+{% endif %}
 
 {% endblock %}
