--- a/openrem/remapp/templates/remapp/standardname-modality.html
+++ b/openrem/remapp/templates/remapp/standardname-modality.html
@@ -11,17 +11,52 @@
         <th style="text-align: center; vertical-align: middle;" scope="col">Delete?</th>
     {% endif %}
   </tr>
-  {% for eachrow in name_set %}
-    <tr class="clickable-row" row_name="{{ eachrow.id }}">
-      <td><a style="text-decoration: none">{{ eachrow.standard_name }}</a></td>
-      <td><a style="text-decoration: none">{{ eachrow.study_description|default_if_none:"-" }}</a></td>
-      <td><a style="text-decoration: none">{{ eachrow.requested_procedure_code_meaning|default_if_none:"-" }}</a></td>
-      <td><a style="text-decoration: none">{{ eachrow.procedure_code_meaning|default_if_none:"-" }}</a></td>
-      <td><a style="text-decoration: none">{{ eachrow.acquisition_protocol|default_if_none:"-" }}</a></td>
-      {% if admin.admingroup %}
-          <td style="text-align: center; vertical-align: middle;"><a href="{% url 'update_name' std_name_pk=eachrow.pk modality=modality %}" role="button">Modify</a></td>
-          <td style="text-align: center; vertical-align: middle;"><a href="{% url 'standard_name_delete' pk=eachrow.pk %}" role="button">Delete</a></td>
-      {% endif %}
-    </tr>
+
+  {% regroup name_set by standard_name as grouped_name_list %}
+  {% for standard_name in grouped_name_list %}
+      <tr class="clickable-row">
+          <td><a style="text-decoration: none">{{ standard_name.grouper }}</a></td>
+          <td><a style="text-decoration: none">
+            <table>
+              {% for item in standard_name.list %}
+                  {% if item.study_description %}
+                      <tr><td>{{ item.study_description }}</td></tr>
+                  {% endif %}
+              {% endfor %}
+            </table>
+          </a></td>
+          <td><a style="text-decoration: none">
+            <table>
+              {% for item in standard_name.list %}
+                  {% if item.requested_procedure_code_meaning %}
+                    <tr><td>{{ item.requested_procedure_code_meaning }}</td></tr>
+                  {% endif %}
+              {% endfor %}
+            </table>
+          </a></td>
+          <td><a style="text-decoration: none">
+            <table>
+              {% for item in standard_name.list %}
+                  {% if item.procedure_code_meaning %}
+                    <tr><td>{{ item.procedure_code_meaning }}</td></tr>
+                  {% endif %}
+              {% endfor %}
+            </table>
+          </a></td>
+          <td><a style="text-decoration: none">
+            <table>
+              {% for item in standard_name.list %}
+                  {% if item.acquisition_protocol %}
+                  <tr><td>{{ item.acquisition_protocol }}</td></tr>
+                  {% endif %}
+              {% endfor %}
+            </table>
+          </a></td>
+          {% if admin.admingroup %}
+              <td style="text-align: center; vertical-align: middle;"><a href="{% url 'update_name' std_name_pk=standard_name.list.0.pk modality=modality %}" role="button">Modify</a></td>
+              <td style="text-align: center; vertical-align: middle;"><a href="{% url 'standard_name_delete' pk=standard_name.list.0.pk %}" role="button">Delete</a></td>
+          {% endif %}
+      </tr>
   {% endfor %}
+
 </table>
