--- a/openrem/remapp/templates/remapp/dxfiltered.html
+++ b/openrem/remapp/templates/remapp/dxfiltered.html
@@ -114,7 +114,7 @@
                                 </h4>
                             </div>
 
-                            <div id="{{ field_group.grouper|cut:" " }}" class="panel-collapse collapse">
+                            <div id="{{ field_group.grouper|cut:" " }}" class="panel-collapse collapse in">
                                 <div class="panel-body">
 
                                     <table class="table table-condensed">
