Added mammo standard acquisition level charts. Still need to add the study one. Refs issue #862

--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -146,7 +146,7 @@
             {% csrf_token %}
             {% for field in MGChartOptionsForm %}
                 <tr>
-                {% if field.label == 'Study workload' or field.label == 'Time period' %}
+                {% if field.label == 'Study workload' or field.label == 'Time period' or field.label == 'Standard acquisition name frequency' %}
                     <td class="top_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
                     <td class="top_border">{{ field }}</td>
                 {% else %}
