--- a/openrem/remapp/templates/remapp/ctdetail.html
+++ b/openrem/remapp/templates/remapp/ctdetail.html
@@ -65,7 +65,7 @@
 <table class="table table-striped table-bordered small" aria-describedby="Exposure details for each acquisition contained in the study">
     <th scope="col">Acquisition protocol</th>
 {% if showStandardNames %}
-    <th scope="col">Standard acquisition protocol</th>
+    <th scope="col">Standard acquisition name</th>
 {% endif %}
     <th scope="col">Type</th>
     <th scope="col">CTDI<sub>vol</sub> (mGy)</th>
