--- a/openrem/remapp/templates/remapp/filteredbase.html
+++ b/openrem/remapp/templates/remapp/filteredbase.html
@@ -9,6 +9,7 @@
 
     <script src="{{ STATIC_URL }}js/bootstrap-datepicker.js"></script>
     <script src="{{ STATIC_URL }}js/charts/chartCommonFunctions.js"></script>
+    <script src="{{ STATIC_URL }}js/sorttable.js"></script>
 
     <!-- Internet Explorer (up to version 8) doesn't support array indexOf. The script
     below adds the functionality if it is missing. -->
