Improving data tables: pivoted so now a column per x-ray system for value and count. Formatting improved. Sort-of refs issue #862

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -431,3 +431,12 @@ img.colour_swatch {
 .selector select {
   overflow: auto;
 }
+
+.chart-data-table {
+  position: relative;
+  z-index: 99999;
+}
+
+.chart-data-table-contents {
+  background: rgba(255,255,255,1.0);
+}
