Added a minimal working implementation for the nm summary list. Filters contain only a very basic set as well as chart options. Exports and actual generation of charts is not yet implemented. (But present in the view) Common code snippets used in views.py were grouped into small helper functions for all modalities.

--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -65,8 +65,7 @@
                 {% endif %}
                 {% if request.user.userprofile.displayNM %}
                   {% block navnm %}
-                    <li><a href="{% url 'nm_summary_list_filter' %}">{% trans "Nuclear Medicine" %}</a></li>
-                  {% endblock %}
+                    <li>{% endblock %}<a href="{% url 'nm_summary_list_filter' %}">{% trans "Nuclear Medicine" %}</a></li>
                 {% endif %}
             {% endblock %}
           </ul>
