Added minimal working detail page for nm. Changed highlighting of tabs for mg, because otherwise Nm would not be shown in the detailview

--- a/openrem/remapp/templates/remapp/mgdetail.html
+++ b/openrem/remapp/templates/remapp/mgdetail.html
@@ -4,13 +4,7 @@
   <script src="{{ STATIC_URL }}js/sorttable.js"></script>
 {% endblock %}
 
-{% block navbar %}
-            {% if request.user.userprofile.displayCT %}<li><a href="{% url 'ct_summary_list_filter' %}">CT</a></li>{% endif %}
-            {% if request.user.userprofile.displayRF %}<li><a href="{% url 'rf_summary_list_filter' %}">Fluoroscopy</a></li>{% endif %}
-            {% if request.user.userprofile.displayMG %}<li class="active"><a href="{% url 'mg_summary_list_filter' %}">Mammography</a></li>{% endif %}
-            {% if request.user.userprofile.displayDX %}<li><a href="{% url 'dx_summary_list_filter' %}">Radiography</a></li>{% endif %}
-{% endblock %}
-
+{% block navmg%}<li class="active">{% endblock %}
 
 {% block mainblock %}
 <h1>Detail list of events</h1>
