Finished the basic setup for creating charts for NM; Study Frequency and Study Workload charts are implemented

--- a/openrem/remapp/templates/remapp/nmfiltered.html
+++ b/openrem/remapp/templates/remapp/nmfiltered.html
@@ -210,7 +210,7 @@
         <!-- End of JavaScript Plotly chart resizing code. -->
 
         <!-- JavaScript chart AJAX code. -->
-        <script src="{{ STATIC_URL }}js/charts/ctChartAjax.js"></script>
+        <script src="{{ STATIC_URL }}js/charts/nmChartAjax.js"></script>
         <!-- End of JavaScript chart AJAX code. -->
 
         {% for chart in required_charts %}
