--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -158,6 +158,26 @@
         </table>
         <input class="btn btn-default" name="submit" type="submit" />
       </div>
+      <div class="panel-heading">
+        <h3 class="panel-title">NM chart options</h3>
+      </div>
+      <div class="panel-body">
+        <table aria-describedby="NM chart options">
+            {% csrf_token %}
+            {% for field in NMChartOptionsForm %}
+                <tr>
+                {% if field.label == 'Time period' %}
+                    <td class="top_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
+                    <td class="top_border">{{ field }}</td>
+                {% else %}
+                    <td><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
+                    <td>{{ field }}</td>
+                {% endif %}
+                </tr>
+            {% endfor %}
+        </table>
+        <input class="btn btn-default" name="submit" type="submit" />
+      </div>
 
     </div>
   </form>
