Added missing radionuclide and radionuclide half life to detail view

--- a/openrem/remapp/templates/remapp/nmdetail.html
+++ b/openrem/remapp/templates/remapp/nmdetail.html
@@ -48,6 +48,14 @@
             <td>{{radioadmin.radiopharmaceutical_agent.code_meaning}}</td>
         </tr>
         <tr>
+            <th scope="col">Radionuclide</th>
+            <td>{{radioadmin.radionuclide.code_meaning}}</td>
+        </tr>
+        <tr>
+            <th scope="col">Radionuclide half life</th>
+            <td>{{radioadmin.radionuclide_half_life|floatformat:1}} s</td>
+        </tr>
+        <tr>
             <th scope="col">Administered Activity</th>
             <td>{{radioadmin.administered_activity|floatformat:2}}</td>
         </tr>
