Added a field for storing if Nuclear Medicine Images should be deleted after import to model and the required forms/templates. Modified openrem_nm such that it actually deletes the file when the settings says so.

--- a/openrem/remapp/templates/remapp/dicomsummary.html
+++ b/openrem/remapp/templates/remapp/dicomsummary.html
@@ -222,6 +222,10 @@
                               <th scope="col">Philips CT dose info images?</th>
                               <td>{{ del_settings.del_ct_phil }}</td>
                           </tr>
+                          <tr>
+                              <th scope="col">Nuclear medicine images?</th>
+                              <td>{{ del_settings.del_nm_im }}</td>
+                          </tr>
                       </table>
                   </div>
               </div>
