Added effective dose to nm detail view

--- a/openrem/remapp/templates/remapp/nmdetail.html
+++ b/openrem/remapp/templates/remapp/nmdetail.html
@@ -59,6 +59,12 @@
             <th scope="col">Administered Activity</th>
             <td>{{radioadmin.administered_activity|floatformat:2}}</td>
         </tr>
+        {% if radioadmin.effective_dose %} 
+        <tr>
+            <th scope="col">Effective Dose</th>
+            <td>{{radioadmin.effective_dose|floatformat:2}}</td>
+        </tr>
+        {% endif %}
         {% if associated_ct is not None %}
         <tr>
             <th scope="col">Associated CT study</th>
@@ -142,8 +148,6 @@
             </td>
         </tr>
     {% endfor %}
-    <!--TODO Effective Dose-->
-  </table>
   {% endif %}
 
   <!--TODO PET Series-->
