--- a/openrem/remapp/templates/remapp/nmdetail.html
+++ b/openrem/remapp/templates/remapp/nmdetail.html
@@ -130,6 +130,7 @@
  
   {% if radioadmin.organdose_set.count > 0 %}
   <table class="table table-striped table-bordered small" aria-describedby="Organ Doses">
+      <tr><th>Organ Doses</th></tr>
       <tr>
         <th>Finding Site</th>
         <th>Laterality</th>
@@ -156,7 +157,35 @@
     {% endfor %}
   {% endif %}
 
-  <!--TODO PET Series-->
+  {% if radiopharm.petseries_set.count > 0 %} 
+  <table class="table table-striped table-bordered small" aria-describedby="PET Series">
+    <tr><th>PET Series</th></tr>
+    <tr>
+        <th>Series date</th>
+        <th>Number of Slices</th>
+        <th>Reconstruction Method</th>
+        <th>Coincidence Window width</th>
+        <th>Energy Window Lower/Upper Limit</th>
+        <th>Scan Progression</th>
+        <th>Number of RR intervals</th>
+        <th>Number of time slots</th>
+        <th>Number of time slices</th>
+    </tr>
+    {% for petserie in radiopharm.petseries_set.all %} 
+        <tr>
+            <td>{{petserie.series_datetime}}</td>
+            <td>{{petserie.number_of_slices|floatformat:0}}</td>
+            <td>{{petserie.reconstruction_method}}</td>
+            <td>{{petserie.coincidence_window_width|floatformat:2}}</td>
+            <td>{{petserie.energy_window_lower_limit|floatformat:2}} / {{petserie.energy_window_upper_limit|floatformat:2}}</td>
+            <td>{{petserie.scan_progression_direction}}</td>
+            <td>{{petserie.number_of_rr_intervals|floatformat:0}}</td>
+            <td>{{petserie.number_of_time_slots|floatformat:0}}</td>
+            <td>{{petserie.number_of_time_slices|floatformat:0}}</td>
+        </tr>
+    {% endfor %}
+  </table>
+  {% endif %}
 
   {% with patcharac=radiopharm.radiopharmaceuticaladministrationpatientcharacteristics_set.first %}
   {% if patcharac is not None %}
