--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -127,6 +127,7 @@
                         <li><a href="{% url 'display_names_view' %}">{% trans "Display names & modality" %}</a></li>
                         <li><a href="{% url 'dicom_delete_settings_update' 1 %}">{% trans "DICOM object deletion" %}</a> </li>
                         <li><a href="{% url 'dicom_summary' %}">{% trans "DICOM networking" %}</a></li>
+                        <li><a href="{% url 'get_query_summary' %}">{% trans "DICOM query summary" %}</a></li>
                         <li><a href="{% url 'patient_id_settings_update' 1 %}">{% trans "Patient ID" %}</a> </li>
                         <li><a href="{% url 'not_patient_indicators' %}">{% trans "Not-patient indicators" %}</a> </li>
                         <li><a href="{% url 'skin_dose_map_settings_update' 1 %}">{% trans "Skin dose map" %}</a> </li>
