--- a/openrem/remapp/templates/remapp/dicomquerysummary.html
+++ b/openrem/remapp/templates/remapp/dicomquerysummary.html
@@ -13,10 +13,10 @@
       <th id="message">Message</th>
     </tr>
     {% for query in queries %}
-            <tr class="clickable-row" data-href="{% url 'get_query_studies' query.pk %}">
-                <td><a href="{% url 'get_query_studies' query.pk %}">{{ query.query_id }}</a></td>
-                <td><a href="{% url 'get_query_studies' query.pk %}">{{ query.started_at }}</a></td>
-                <td><a href="{% url 'get_query_studies' query.pk %}">{{ query.message }}</a></td>
+            <tr class="clickable-row" data-href="{% url 'get_query_details' query.pk %}">
+                <td><a href="{% url 'get_query_details' query.pk %}">{{ query.query_id }}</a></td>
+                <td><a href="{% url 'get_query_details' query.pk %}">{{ query.started_at }}</a></td>
+                <td><a href="{% url 'get_query_details' query.pk %}">{{ query.message }}</a></td>
             </tr>
     {% endfor %}
   </table>
