Added view for showing the queried studies of a query

--- a/openrem/remapp/templates/remapp/dicomquerysummary.html
+++ b/openrem/remapp/templates/remapp/dicomquerysummary.html
@@ -6,7 +6,7 @@
 
 {% block mainblock %} 
 
-<table class="table sortable table-bordered table-hover row-clickable small" aria-describedby="Study summary table">
+<table class="table sortable table-bordered table-hover row-clickable" aria-describedby="Study summary table">
     <tr>
       <th id="query_id">Query ID</th>
       <th id="started_at">Started at</th>
