--- a/openrem/remapp/templates/remapp/dicomquerydetails.html
+++ b/openrem/remapp/templates/remapp/dicomquerydetails.html
@@ -14,19 +14,55 @@
 
 {% block mainblock %} 
 
-
-    <div style="margin-left: 30%; margin-right: 30%;">
+<div class="row">
+    <div class="col-md-6 col-md-offset-1">
         <div class="row">
-        <div id="qr-status"></div>
-        <div id="move-button"></div>
-        </div>
-        <div class="row">
-        <div id="move-status"></div>
-        </div>
-        <div class="row">
-        <div id="subops"></div>
+        <h4>
+            This table shows all the studies that the remote PACS/DICOM node sent and where
+            considered for downloading (moving).
+        </h4>
+        <table class="table table-bordered table-hover row-clickable table-sortable">
+            <tr>
+                <th>Study UID</th>
+                <th>Modality</th>
+                <th>Downloaded?</th>
+            </tr>
+            {% for qstudy in querystudies %} 
+                <tr>
+                    <td>
+                        <a href="{% url 'get_query_study_details' qstudy.pk %}">
+                            {{qstudy.study_instance_uid}}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'get_query_study_details' qstudy.pk %}">
+                            {{qstudy.modality}}
+                        </a>
+                    </td>
+                    <td>
+                        <a href="{% url 'get_query_study_details' qstudy.pk %}">
+                            Not present yet
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
         </div>
     </div>
+
+    <div class="col-md-3 col-md-offset-1">
+        <div class="row">
+            <div id="qr-status"></div>
+            <div id="move-button"></div>
+            </div>
+            <div class="row">
+            <div id="move-status"></div>
+            </div>
+            <div class="row">
+            <div id="subops"></div>
+        </div>
+    </div>
+</div>
 
 
 {% endblock %}
