Added NM to display names page. Removed unused collection of names in display_names_view. Added NM to the table for reviewing failed imports. refs 932

--- a/openrem/remapp/templates/remapp/displaynameview.html
+++ b/openrem/remapp/templates/remapp/displaynameview.html
@@ -182,6 +182,16 @@
     </p>
 {% endif %}
 
+<a id="nm" class="vert-offset">
+  <h3>Nuclear Medicine</h3>
+</a>
+<span id="NM-names">Querying the database for display names, please wait</span>
+{% if admin.admingroup %} 
+  <p>
+    <input class="btn btn-default" type="submit" value="Update">
+  </p>
+{% endif %}
+
 <a id="others" class="vert-offset">
   <h3>Others</h3>
 </a>
